--- a/src/blocks/connect/connect.scss
+++ b/src/blocks/connect/connect.scss
@@ -12,7 +12,6 @@
     }
 
     &__form{
-        // width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -27,6 +26,7 @@
 
     &__input-name, &__input-email, &__input-btn{
         margin: 11px 0px;
+        -webkit-appearance: none;
     }
 
     &__input-name{
